fix: Prevent background image from stretching full screen on /match-score endpoint.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -223,7 +223,7 @@ footer {
     margin-top: 20px;
     background-image: url('../images/scorekeeper.png');
     background-position: center;
-    min-height: 30vh;
+    height: 270px;
     background-size: cover;
 }
 
